[package]
name = "qport"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow     = "1"
notify     = "6"
reqwest    = { version = "0.12", features = ["cookies", "json"] }
tokio      = { version = "1", features = ["full"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
